# license-gen

./: .gitignore  .travis.yml  LICENSE  README.md  appveyor.yml  stack.yaml
deployment/: gcloud_sftp.enc  known_hosts
license-app/: LICENSE  license-app.cabal
license-app/app/: Main.hs
license-app/src/JiaHe/LM/App/: App.hs
license-app/test/: Spec.hs
license-app/test/JiaHe/LM/App/: AppSpec.hs
license-dll/: license-dll.cabal
license-dll/csrc/: StartEnd.c
license-dll/export/: Export.hs
license-dll/src/JiaHe/LM/: Foreign.hs  Serialize.hs
license-haskell/: license-haskell.cabal
license-haskell/config/: cipher-production.cfg  cipher.cfg
license-haskell/src/JiaHe/LM/: License.hs
license-haskell/src/JiaHe/LM/Internal/: Cipher.hs  Environment.hs  LicenseImpl.hs
license-haskell/test/unit/: Spec.hs
license-haskell/test/unit/JiaHe/LM/Test/: CipherSpec.hs  LicenseSpec.hs
scripts/: DecryptFile.hs  EncryptFile.hs  sftp_batch
