name:                license-app
version:             0.1
synopsis:            Executables for license-haskell
license:             MIT
license-file:        ../LICENSE
author:              Zelin Feng
maintainer:          fengzlin@mail2.sysu.edu.cn
copyright:           (c) 2017 JiaHe Software Inc.
build-type:          Simple
cabal-version:       >=1.10

executable license-app-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts
  build-depends:       base
                     , license-app
  default-language:    Haskell2010

executable license-app-exe-readonly
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -DREAD_ONLY
  build-depends:       base
                     , license-app
  default-language:    Haskell2010
  other-extensions:    CPP

library
  hs-source-dirs:      src
  exposed-modules:     JiaHe.LM.App.App
  -- other-modules:       Module
  build-depends:       base >= 4 && < 5
                     , license-haskell
                     , bytestring
                     , text
                     , MissingH
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite license-app-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       JiaHe.LM.App.AppSpec
  build-depends:       base
                     , license-app
                     , hspec
                     , QuickCheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zelinf/license-manager
